ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /  
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: hobbyhub.com
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users-clusterip-srv
                port:
                  number: 8080
          - path: /api/h/users
            pathType: Prefix
            backend:
              service:
                name: hobbies-clusterip-srv
                port:
                  number: 8080
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
#          - path: "/keycloak(/|$)(.*)"  # Match /keycloak and everything after it
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: keycloak  # Name of the Keycloak service
#                port:
#                  number: 8080
